Ensure new annotations are all tagged as having 'manual' confidence.